--- a/Multi-Tenancy-Demo/appsettings.json
+++ b/Multi-Tenancy-Demo/appsettings.json
@@ -1,6 +1,8 @@
+
+
 {
   "TenantSettings": {
-    "Configuration": {
+    "Defaults": {
       "DBProvider": "mssql",
       "ConnectionString": "Server=AHMED-HASSAN-PC\\MSSQLSERVER01;Database=TenantSharedDB;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
@@ -11,20 +13,19 @@
         "ConnectionString": "Server=AHMED-HASSAN-PC\\MSSQLSERVER01;Database=TenantDevAhmedDB;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
       },
       {
-        "Name": "Microsoft",
-        "TId": "Microsoft",
+        "Name": "microsoft",
+        "TId": "microsoft",
         "ConnectionString": "Server=AHMED-HASSAN-PC\\MSSQLSERVER01;Database=TenantMicrosoftDB;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
       },
       {
-        "Name": "LinkedIn",
-        "TId": "LinkedIn"
+        "Name": "linkedIn",
+        "TId": "linkedIn"
       },
       {
-        "Name": "Google",
-        "TId": "Google"
+        "Name": "twitter",
+        "TId": "twitter"
       }
     ]
-
   },
   "Logging": {
     "LogLevel": {
