--- a/MultiTenancy/MultiTenancy.csproj
+++ b/MultiTenancy/MultiTenancy.csproj
@@ -22,4 +22,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.1.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\MultiTenancy-Settings\MultiTenancy-Settings.csproj" />
+  </ItemGroup>
+
 </Project>
