--- a/MultiTenancy/appsettings.json
+++ b/MultiTenancy/appsettings.json
@@ -1,20 +1,20 @@
 {
   "TenantSettings": {
     "Defaults": {
-      "DBProvider": "mssql",
-      "ConnectionString": "Server=AHMED-HASSAN-PC\\MSSQLSERVER01;Database=TenantSharedDB;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DBProvider": "mssql",
+        "ConnectionString": "Server=AhmedHassan;Database=TenantSharedDB;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
     },
     "Tenants": [
-      {
-        "Name": "devcreed",
-        "TId": "devcreed",
-        "ConnectionString": "Server=AHMED-HASSAN-PC\\MSSQLSERVER01;Database=TenantdevcreedDB;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
-      },
-      {
-        "Name": "microsoft",
-        "TId": "microsoft",
-        "ConnectionString": "Server=AHMED-HASSAN-PC\\MSSQLSERVER01;Database=TenantmicrosoftDB;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
-      },
+        {
+            "Name": "devcreed",
+            "TId": "devcreed",
+            "ConnectionString": "Server=AhmedHassan;Database=TenantdevcreedDB;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
+        },
+        {
+            "Name": "microsoft",
+            "TId": "microsoft",
+            "ConnectionString": "Server=AhmedHassan;Database=TenantmicrosoftDB;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
+        },
       {
         "Name": "linkedIn",
         "TId": "linkedIn"
