--- a/MultiTenancy/appsettings.json
+++ b/MultiTenancy/appsettings.json
@@ -1,35 +1,48 @@
 {
-  "TenantSettings": {
-    "Defaults": {
-        "DBProvider": "mssql",
-        "ConnectionString": "Server=AhmedHassan;Database=TenantSharedDB;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "TenantSettings": {
+        "Defaults": {
+            "DBProvider": "mssql",
+            "ConnectionString": "Server=AhmedHassan;Database=TenantSharedDB;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
+        },
+        "Tenants": [
+            {
+                "Name": "devcreed",
+                "TId": "devcreed",
+                "ConnectionString": "Server=AhmedHassan;Database=TenantdevcreedDB;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
+            },
+            {
+                "Name": "microsoft",
+                "TId": "microsoft",
+                "ConnectionString": "Server=AhmedHassan;Database=TenantmicrosoftDB;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
+            },
+            {
+                "Name": "linkedIn",
+                "TId": "linkedIn"
+            },
+            {
+                "Name": "twitter",
+                "TId": "twitter"
+            }
+        ]
     },
-    "Tenants": [
-        {
-            "Name": "devcreed",
-            "TId": "devcreed",
-            "ConnectionString": "Server=AhmedHassan;Database=TenantdevcreedDB;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
-        },
-        {
-            "Name": "microsoft",
-            "TId": "microsoft",
-            "ConnectionString": "Server=AhmedHassan;Database=TenantmicrosoftDB;Encrypt=False;Trusted_Connection=True;MultipleActiveResultSets=true"
-        },
-      {
-        "Name": "linkedIn",
-        "TId": "linkedIn"
-      },
-      {
-        "Name": "twitter",
-        "TId": "twitter"
-      }
-    ]
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "MailSettings": {
+        "Email": "S21511602EG@std.aou.edu.eg",
+        "DisplayName": "DevAhmed-H",
+        "Password": "Wwaassdd@528528",
+        "Port": 587,
+        "Host": "smtp-mail.outlook.com"
+    },
+    "JWT": {
+        "Key": "my_se!@#SADDASDasdjashnd654asd@!#%SCcret_@SDASkey_12345",
+        "Issuer": "http://localhost:5000",
+        "Audience": "http://localhost:5000",
+        "DurationInDay": 30
+    },
+    "AllowedHosts": "*"
 }
