Added some services like (wishList ...and more) and solved some bugs

--- a/MultiTenancy/appsettings.json
+++ b/MultiTenancy/appsettings.json
@@ -32,11 +32,11 @@
         }
     },
     "MailSettings": {
-        "Email": "S21511602EG@std.aou.edu.eg",
-        "DisplayName": "DevAhmed-H",
-        "Password": "Wwaassdd@528528",
-        "Port": 587,
-        "Host": "smtp-mail.outlook.com"
+        "Email": "zoser528@gmail.com",
+        "DisplayName": "mult-tenancy",
+        "Password": "ific jdmd fzao beyq",
+        "Port": 465,
+        "Host": "smtp.gmail.com"
     },
     "JWT": {
         "Key": "my_se!@#SADDASDasdjashnd654asd@!#%SCcret_@SDASkey_12345",
